fix header z-index

--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -4,7 +4,7 @@
   position: absolute;
   top: $header-height-mobile + 1;
   bottom: 0;
-  z-index: 1000;
+  z-index: 999;
 
   display: grid;
   align-content: space-between;
